# zensical

./: .dockerignore  .editorconfig  .gitattributes  .gitcliff.toml  .gitignore  .mono.toml  .mypy.ini  .ruff.toml  .rustfmt.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  SECURITY.md  pyproject.toml  ty.toml
.githooks/: commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-report-a-bug.yml  02-request-a-change.yml  config.yml
.github/workflows/: build.yml  check.yml  commit.yml  docker.yml  release.yml
crates/zensical/: Cargo.toml
crates/zensical-serve/: Cargo.toml
crates/zensical-serve/src/: handler.rs  http.rs  lib.rs  middleware.rs  router.rs  server.rs
crates/zensical-serve/src/handler/: convert.rs  error.rs  matcher.rs  scope.rs  stack.rs
crates/zensical-serve/src/handler/matcher/: error.rs  params.rs  route.rs
crates/zensical-serve/src/handler/matcher/route/: error.rs
crates/zensical-serve/src/handler/stack/: builder.rs  factory.rs
crates/zensical-serve/src/http/: component.rs  request.rs  response.rs
crates/zensical-serve/src/http/component/: error.rs  header.rs  method.rs  status.rs
crates/zensical-serve/src/http/request/: error.rs  headers.rs  uri.rs
crates/zensical-serve/src/http/request/uri/: encoding.rs  query.rs
crates/zensical-serve/src/http/request/uri/query/: encoding.rs
crates/zensical-serve/src/http/response/: convert.rs  error.rs  ext.rs  headers.rs
crates/zensical-serve/src/middleware/: convert.rs  files.rs  path.rs  websocket.rs
crates/zensical-serve/src/middleware/path/: base.rs  normalize.rs
crates/zensical-serve/src/router/: action.rs  routes.rs
crates/zensical-serve/src/router/routes/: builder.rs
crates/zensical-serve/src/server/: builder.rs  connection.rs  error.rs  poller.rs
crates/zensical-watch/: Cargo.toml
crates/zensical-watch/src/: agent.rs  lib.rs
crates/zensical-watch/src/agent/: error.rs  event.rs  handler.rs  manager.rs  monitor.rs
crates/zensical-watch/src/agent/handler/: builder.rs  error.rs
crates/zensical/src/: config.rs  lib.rs  python.rs  server.rs  structure.rs  template.rs  watcher.rs  workflow.rs
crates/zensical/src/config/: error.rs  extra.rs  mdx.rs  plugins.rs  project.rs  theme.rs  validation.rs
crates/zensical/src/python/: collector.rs  issues.rs  span.rs
crates/zensical/src/python/collector/: anchor.rs  reference.rs  snippet.rs
crates/zensical/src/python/collector/reference/: footnote.rs  link.rs
crates/zensical/src/python/collector/snippet/: file.rs  range.rs
crates/zensical/src/python/issues/: error.rs
crates/zensical/src/server/: client.rs
crates/zensical/src/structure/: dynamic.rs  markdown.rs  nav.rs  page.rs  search.rs  tag.rs  toc.rs
crates/zensical/src/structure/dynamic/: float.rs
crates/zensical/src/structure/markdown/: autorefs.rs
crates/zensical/src/structure/nav/: item.rs  iter.rs  meta.rs
crates/zensical/src/structure/search/: item.rs
crates/zensical/src/template/: filter.rs  loader.rs  output.rs
crates/zensical/src/watcher/: source.rs
crates/zensical/src/workflow/: cached.rs
python/tests/integration/: conftest.py
python/tests/integration/markdown/: test_render.py
python/tests/unit/collectors/: test_references.py
python/tests/unit/extensions/: conftest.py  test_autorefs.py  test_glightbox.py  test_macros.py
python/tests/unit/markdown/: test_render.py
python/zensical/: __init__.py  __main__.py  config.py  main.py  markdown.py  zensical.pyi
python/zensical/bootstrap/: zensical.toml
python/zensical/bootstrap/.github/workflows/: docs.yml
python/zensical/bootstrap/docs/: index.md  markdown.md
python/zensical/collectors/: __init__.py  anchors.py  exclusions.py  references.py  snippets.py
python/zensical/collectors/references/: __init__.py  cursor.py  types.py
python/zensical/compat/: __init__.py  autorefs.py  mkdocstrings.py
python/zensical/extensions/: __init__.py  autorefs.py  context.py  emoji.py  glightbox.py  links.py  macros.py  preview.py  search.py
python/zensical/extensions/utilities/: filter.py
python/zensical/markdown/: __init__.py  extensions.py  processors.py  render.py
python/zensical/utilities/: span.py
scripts/: commit.py  dev.py  docker-entrypoint.sh  prepare.py
