# Copyright (c) 2025 Zensical and contributors

# SPDX-License-Identifier: MIT
# Third-party contributions licensed under DCO

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to
# deal in the Software without restriction, including without limitation the
# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
# sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

[package]
name = "zensical"
version = "0.0.6"
description = "Zensical"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "zensical"
crate-type = ["cdylib"]

[dependencies]
zensical-serve.workspace = true
zensical-watch.workspace = true

ahash.workspace = true
crossbeam.workspace = true
fluent-uri.workspace = true
minijinja = { workspace = true, features = [
  "json", "loader", "builtins", "urlencode"
] }
minijinja-contrib = { workspace = true, features = ["html_entities"] }
mio = { workspace = true, features = ["net", "os-poll"] }
pyo3.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true, features = [
  "max_level_trace",
  "release_max_level_error"
] }
tracing-chrome = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
zrx.workspace = true

[features]
default = []
tracing = [
  "dep:tracing",
  "dep:tracing-chrome",
  "dep:tracing-subscriber",
  "zensical-watch/tracing",
  "zrx/tracing",
]
